fix(style): fix a tag letter-spacing + button arrow with + layout is-reversed class

--- a/src/scss/custom/_buttons.scss
+++ b/src/scss/custom/_buttons.scss
@@ -113,7 +113,6 @@
     }
     margin: .4rem 0 .5rem 2rem;
     height: .5rem;
-    width: auto;
   }
 }
 
